--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@ body {
 }
 
 .section {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    
     background-color: rgb(242, 252, 232); 
     margin: 20px 100px; 
     padding: 20px;
